--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Продаж збоої Glock|Gamma</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="glock.css"
+    <link rel="stylesheet" href="style.css"
     
 </head>
 <body>
